@@ -21,14 +21,16 @@ type addr ={ host : string ; port : int option ; }
 
 type t =
   | Host of addr
+  | Qemu
   | Adb
   | No
 
-let tags = ["none";"adb";"host[:port]";]
+let tags = ["none";"adb";"qemu";"host[:port]";]
 
 let parse tag = match tag with
 | "none" -> Some No
 | "adb"  -> Some Adb
+| "qemu"  -> Some Qemu
 | _ ->
     let h =
       try
@@ -46,6 +48,7 @@ open Printf
 let pp = function
   | No -> "none"
   | Adb -> "adb"
+  | Qemu -> "qemu"
   | Host h ->
       match h.port with
       | None -> h.host
